...
                  "Health 360",// The text to display
                  style: TextStyle(fontWeight: FontWeight.bold, fontSize:  MediaQuery.of(context).size.width/22.05),
                ),
              ],
            ),
            Padding(padding: EdgeInsets.fromLTRB(MediaQuery.of(context).size.width/14.7, 0, MediaQuery.of(context).size.width/14.7,MediaQuery.of(context).size.height/56.2)),
            Text("Selected Date: " + today.toString().split(" ")[0], style:TextStyle(fontWeight: FontWeight.bold, fontSize:  MediaQuery.of(context).size.width/27),),
            Padding(padding: EdgeInsets.fromLTRB(MediaQuery.of(context).size.width/14.7, 0, MediaQuery.of(context).size.width/14.7,MediaQuery.of(context).size.height/56.2)),

            Expanded(
              child: SingleChildScrollView(

                // Add a single child scroll view widget to the expanded widget
...
