...
              setState(() {
                _isLoading = true;
              });
              signIn(emailController.text, passwordController.text);
            }
          },
          child: const Text("Login",
              style: TextStyle(color: Colors.black87, fontSize: 16)),
        ),
      ),
    );
  }

...
